
??? 2005 - Release 0.3.10
Changes since release 0.3.9:

- The suggested syntax for setting and registering with the global
  evaluation date is now:
     Settings::instance().evaluationDate() = date;
     registerWith(Settings::instance().evaluationDate());
